--- a/StvorennyaSaytiv.html
+++ b/StvorennyaSaytiv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Основи програмної інженерії</title>
+<title>Основи веб-розробки</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -18,10 +18,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
 <!-- Navbar -->
 <div class="w3-top">
-  <div class="w3-bar w3-red w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="https://winterschoolofprogramming.w3spaces.com/index.html" class="w3-bar-item w3-button w3-padding-large w3-red">На головну</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Курс</a>
+  <div class="w3-bar w3-cyan w3-card w3-left-align w3-large">
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-cyan" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="https://archibaldkami.github.io/Meow/" style="color:white" class="w3-bar-item w3-button w3-padding-large w3-hover-white">На головну</a>
+    <a href="#" style="color:white" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Курс</a>
   </div>
 
   <!-- Navbar on small screens -->
@@ -34,21 +34,22 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Header -->
-<header class="w3-container w3-red w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">Основи програмної інженерії</h1>
-  <p class="w3-xlarge">Почнемо вивчення</p>
+<header class="w3-container w3-cyan w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-jumbo" style="color:white">Основи веб-розробки</h1>
+  <p class="w3-xlarge" style="color:white">Почнемо вивчення</p>
 </header>
 
 <!-- First Grid -->
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>Основи програмної інженерії:</h1>
-      <h5 class="w3-padding-32">Метою дисципліни «Основи програмної інженерії» є вивчення сучасних інженерних принципів (методів) створення надійного, якісного програмного забезпечення, яке задовольняє пропонованим до нього вимогам; формування у студентів розуміння необхідності застосування даних принципів програмної інженерії та набуття студентами теоретичних знань та практичних навичок з проектування програмних продуктів.</h5>
+      <h1>Основи веб-розробки</h1>
+      <h5 class="w3-padding-32">Основи веб-розробки:
+        Метою даного курсу є ознайомлення студентів з основами створення веб-сайтів. Починаючи з розуміння клієнт-серверної архітектури до вивчення мов програмування для вебу та інструментів розробки, студенти отримують комплексне розуміння процесу створення сучасних веб-додатків. Під час курсу великий акцент робиться на практичних завданнях, що дозволяє студентам отримати не лише теоретичні знання, але й реальний досвід у розробці веб-сайтів.</h5>
     </div>
 
     <div class="w3-third w3-center">
-      <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+      <i class="fa fa-anchor w3-padding-64 w3-text-cyan"></i>
     </div>
   </div>
 </div>
@@ -57,14 +58,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
-      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+      <i class="fa fa-coffee w3-padding-64 w3-text-cyan w3-margin-right"></i>
     </div>
 
     <div class="w3-twothird">
       <h1>Програмування</h1>
-      <h5 class="w3-padding-32">Першого курсу на C#</h5>
+      <h5 class="w3-padding-32">Першого курсу на HTML&CSS</h5>
 
-      <p class="w3-text-grey">Дистанційний курс пропонує глибоке й систематичне навчання програмування мовою C#. Підлітки здобудуть необхідні знання й навички для ефективного застосування основних засобів мови програмування C#. Учні застосують свої знання в практичних проєктах.</p>
+      <p class="w3-text-grey">Дистанційний курс пропонує глибоке й систематичне навчання програмування HTML&CSS. Підлітки здобудуть необхідні знання й навички для ефективного застосування основних засобів HTML&CSS. Учні застосують свої знання в практичних проєктах.</p>
     </div>
   </div>
 </div>
