--- a/KoduvannyaNaAndroid.html
+++ b/KoduvannyaNaAndroid.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Основи програмної інженерії</title>
+<title>Основи розробки під Android</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -20,7 +20,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-cyan w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-cyan" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="https://winterschoolofprogramming.w3spaces.com/index.html" style="color:white" class="w3-bar-item w3-button w3-padding-large w3-hover-white">На головну</a>
+    <a href="https://archibaldkami.github.io/Meow/" style="color:white" class="w3-bar-item w3-button w3-padding-large w3-hover-white">На головну</a>
     <a href="#" style="color:white" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Курс</a>
   </div>
 
