--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
             <a class="w3-mall w3-text-red" href="https://archibaldkami.github.io/Meow/KoduvannyaNaAndroid.html"></i><span >Перейти</p></span></span></a>
           </div>
           <div class="game-list">
-            <img src="https://th.bing.com/th/id/OIP.SkFMkjJtNQZkMJ2PqidKuwHaEK?w=297&h=180&c=7&r=0&o=5&pid=1.7" style="width:100px; height: 100px;"/>
+            <img src="https://micros.uz/upload/iblock/85a/nwx4nuozlvjg8a4h57kqtpdqginf5ovg/python_programming_language.png" style="width:100px; height: 100px;"/>
             <h3>Кодування на пайтон</h3>
             <a class="w3-mall w3-text-red" href="https://archibaldkami.github.io/Meow/KodyvannyaNaPython.html"></i><span >Перейти</p></span></span></a>
           </div>
           <div class="game-list">
-            <img src="https://th.bing.com/th/id/OIP.SkFMkjJtNQZkMJ2PqidKuwHaEK?w=297&h=180&c=7&r=0&o=5&pid=1.7" style="width:100px; height: 100px;"/>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNJ0WqLW8XVRvXkGeWyeNm9-P0knWY1mNqNA&usqp=CAU" style="width:100px; height: 100px;"/>
             <h3>Створення сайтів</h3>
             <a class="w3-mall w3-text-red" href="https://archibaldkami.github.io/Meow/StvorennyaSaytiv.html"></i><span >Перейти</p></span></span></a>
           </div>
