--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
     <div class="w3-top" class="header" id="home">
       <div class="w3-bar  w3-card w3-left-align w3-large heeder-large-screen" style="background-color: #18816d;" >
-        <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-black w3-large " href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="#home" class="w3-bar-item w3-button w3-padding-large  w3-hover-black">  <img src="https://downloads.intercomcdn.com/i/o/89210937/42fcde794b916d191a63f48b/christmas-1759091_960_720.png" style=" width:30px; height: 30px;"/> Зимова школа програмування</a>
+        <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large " href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+        <a href="#home" class="w3-bar-item w3-button w3-padding-large  w3-hover-white">  <img src="https://downloads.intercomcdn.com/i/o/89210937/42fcde794b916d191a63f48b/christmas-1759091_960_720.png" style=" width:30px; height: 30px;"/> Зимова школа програмування</a>
         <div >
 
           
-          <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black" >Головне</a>
-          <a href="#games" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Меню</a>
-          <a href="#shop" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Новини</a>
-          <a href="#events" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Наші викладачі</a>
-          <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-black">Наші контакти</a>
+          <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" >Головне</a>
+          <a href="#games" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Меню</a>
+          <a href="#shop" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Новини</a>
+          <a href="#events" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Наші викладачі</a>
+          <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Наші контакти</a>
         </div>
     
       </div>
