--- a/dlyavstypnukiv.html
+++ b/dlyavstypnukiv.html
@@ -52,7 +52,7 @@ body {font-family: "Lato", sans-serif}
 
       <ul class="w3-ul w3-border w3-white w3-text-grey">
         <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:500px" id="band">
-        <a class="w3-medium w3-text-red" href="https://t.me/+Sf_UPGBVuxlkYjAy"></i><span >Перейти</p></span></span></a>
+        <a class="w3-medium w3-text-cyan" href="https://t.me/+Sf_UPGBVuxlkYjAy"></i><span >Перейти</p></span></span></a>
       </ul>
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
@@ -95,7 +95,7 @@ body {font-family: "Lato", sans-serif}
         <p><label><i class="fa fa-user"></i> Пароль входу</label></p>
         <input class="w3-input w3-border" type="text" placeholder="Введіть пароль">
         <button class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">Ввійти <i class="fa fa-check"></i></button>
-        <button class="w3-button w3-red w3-section" onclick="document.getElementById('ticketModal').style.display='none'">Закрити <i class="fa fa-remove"></i></button>
+        <button class="w3-button w3-cyan w3-section" onclick="document.getElementById('ticketModal').style.display='none'">Закрити <i class="fa fa-remove"></i></button>
         <p class="w3-right"> <a href="#" class="w3-text-blue">Потрібна допомога?</a></p>
       </div>
     </div>
@@ -115,7 +115,7 @@ body {font-family: "Lato", sans-serif}
         <div class="email-contact">
           <input placeholder="Email"  type="email" style="margin: 8px 0px !important;"/>
           
-          <button class="w3-small w3-red w3-round " style="width: 100px; padding:3px 10px !important">Підписатися</button>
+          <button class="w3-small w3-cyan w3-round " style="width: 100px; padding:3px 10px !important">Підписатися</button>
         </div>
   
       </div>
