--- a/specialnosti.html
+++ b/specialnosti.html
@@ -16,7 +16,7 @@ body {font-size:16px;}
 <body>
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
+<nav class="w3-sidebar w3-cyan w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Закрити меню</a>
   <div class="w3-container">
     <h3 class="w3-padding-64"><b>Спеціальності та професії</b></h3>
@@ -24,13 +24,13 @@ body {font-size:16px;}
   <div class="w3-bar-block">
     <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Спеціальності та професії</a> 
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Інформація про вступ</a> 
-    <a href="https://winterschoolofprogramming.w3spaces.com/index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">На головну сторінку</a> 
+    <a href="https://archibaldkami.github.io/Meow/" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">На головну сторінку</a> 
   </div>
 </nav>
 
 <!-- Top menu on small screens -->
-<header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
-  <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
+<header class="w3-container w3-top w3-hide-large w3-cyan w3-xlarge w3-padding">
+  <a href="javascript:void(0)" class="w3-button w3-cyan w3-margin-right" onclick="w3_open()">☰</a>
   <span>Спеціальності та професії</span>
 </header>
 
@@ -81,7 +81,7 @@ body {font-size:16px;}
         
     <div class="w3-half">
       <ul class="w3-ul w3-light-grey w3-center">
-        <li class="w3-red w3-xlarge w3-padding-32">Повня середня освіта</li>
+        <li class="w3-cyan w3-xlarge w3-padding-32">Повня середня освіта</li>
         <li class="w3-padding-16">⌨️ Оператор з обробки інформації та програмного забезпечення. Термін навчання: 3 роки</li>
         <li class="w3-padding-16">⚡️ Слюсар-електрик з ремонту електроустаткування. Термін навчання: 2 роки 8 місяців</li>
         <li class="w3-padding-16">🍳 Кухар. Термін навчання: 3 роки</li>
@@ -94,7 +94,7 @@ body {font-size:16px;}
   <!-- Contact -->
   <div class="w3-container" id="contact" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>Інформація про вступ</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
+    <hr style="width:50px;border:5px solid #00bcd4" class="w3-round">
     <form action="/action_page.php" target="_blank">
 
              
