--- a/moodle.html
+++ b/moodle.html
@@ -37,23 +37,23 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     <div class="w3-quarter">
       <img src="https://th.bing.com/th/id/OIP.SqzKaDT4gKZaqKogrf4y_QHaEK?pid=ImgDet&rs=1" alt="Основи програмної Інженерії" style="width:100%">
       <h3>Основи програмної інженерії</h3>
-    <a class="w3-medium w3-text-red" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
+    <a class="w3-medium w3-text-cyan" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
    
     </div>
     <div class="w3-quarter">
       <img src="https://th.bing.com/th/id/OIP.SqzKaDT4gKZaqKogrf4y_QHaEK?pid=ImgDet&rs=1" alt="Основи програмної Інженерії" style="width:100%">
       <h3>Іноземна мова</h3>
-    <a class="w3-medium w3-text-red" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
+    <a class="w3-medium w3-text-cyan" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
     </div>
     <div class="w3-quarter">
       <img src="https://th.bing.com/th/id/OIP.SqzKaDT4gKZaqKogrf4y_QHaEK?pid=ImgDet&rs=1" alt="Основи програмної Інженерії" style="width:100%">
       <h3>Вища математика</h3>
-    <a class="w3-medium w3-text-red" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
+    <a class="w3-medium w3-text-cyan" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
     </div>
     <div class="w3-quarter">
       <img src="https://th.bing.com/th/id/OIP.SqzKaDT4gKZaqKogrf4y_QHaEK?pid=ImgDet&rs=1" alt="Основи програмної Інженерії" style="width:100%">
       <h3>Комп'ютерна графіка</h3>
-      <a class="w3-medium w3-text-red" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
+      <a class="w3-medium w3-text-cyan" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
     </div>
   </div>
   
@@ -62,22 +62,22 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     <div class="w3-quarter">
       <img src="https://th.bing.com/th/id/OIP.SqzKaDT4gKZaqKogrf4y_QHaEK?pid=ImgDet&rs=1" alt="Основи програмної Інженерії" style="width:100%">
       <h3>Методи та засоби КІТ</h3>
-    <a class="w3-medium w3-text-red" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
+    <a class="w3-medium w3-text-cyan" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
     </div>
     <div class="w3-quarter">
       <img src="https://th.bing.com/th/id/OIP.SqzKaDT4gKZaqKogrf4y_QHaEK?pid=ImgDet&rs=1" alt="Основи програмної Інженерії" style="width:100%">
       <h3>Українська мова </h3>
-    <a class="w3-medium w3-text-red" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
+    <a class="w3-medium w3-text-cyan" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
     </div>
     <div class="w3-quarter">
       <img src="https://th.bing.com/th/id/OIP.SqzKaDT4gKZaqKogrf4y_QHaEK?pid=ImgDet&rs=1" alt="Основи програмної Інженерії" style="width:100%">
       <h3>Українська мова ЗОШ</h3>
-    <a class="w3-medium w3-text-red" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
+    <a class="w3-medium w3-text-cyan" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
     </div>
     <div class="w3-quarter">
       <img src="https://th.bing.com/th/id/OIP.SqzKaDT4gKZaqKogrf4y_QHaEK?pid=ImgDet&rs=1" alt="Основи програмної Інженерії" style="width:100%">
       <h3>Фізичне вихування</h3>
-    <a class="w3-medium w3-text-red" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
+    <a class="w3-medium w3-text-cyan" href="https://winterschoolofprogramming.w3spaces.com/index.html"><span class="sek-btn-inner"><i class="fas fa-users"></i><span >Відкрити</p></span></span></a>
     </div>
   </div>
 <script>
