--- a/specialnosti.html
+++ b/specialnosti.html
@@ -81,7 +81,7 @@ body {font-size:16px;}
         
     <div class="w3-half">
       <ul class="w3-ul w3-light-grey w3-center">
-        <li class="w3-cyan w3-xlarge w3-padding-32" style="color:white">Повня середня освіта</li>
+        <li class="w3-cyan w3-xlarge w3-padding-32"><p style="color:white">Повня середня освіта</p></li>
         <li class="w3-padding-16">⌨️ Оператор з обробки інформації та програмного забезпечення. Термін навчання: 3 роки</li>
         <li class="w3-padding-16">⚡️ Слюсар-електрик з ремонту електроустаткування. Термін навчання: 2 роки 8 місяців</li>
         <li class="w3-padding-16">🍳 Кухар. Термін навчання: 3 роки</li>
