--- a/contacts.html
+++ b/contacts.html
@@ -19,11 +19,9 @@ body {font-size:16px;}
 <nav class="w3-sidebar w3-cyan w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Закрити меню</a>
   <div class="w3-container">
-    <h3 class="w3-padding-64" style="color:white"><b>Спеціальності та професії</b></h3>
+    <h3 class="w3-padding-64" style="color:white"><b>Наші контакти</b></h3>
   </div>
   <div class="w3-bar-block">
-    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white" style="color:white">Спеціальності та професії</a> 
-    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white" style="color:white">Інформація про вступ</a> 
     <a href="https://archibaldkami.github.io/Meow/" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white" style="color:white">На головну сторінку</a> 
   </div>
 </nav>
@@ -31,7 +29,7 @@ body {font-size:16px;}
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-hide-large w3-cyan w3-xlarge w3-padding">
   <a href="javascript:void(0)" class="w3-button w3-cyan w3-margin-right" onclick="w3_open()">☰</a>
-  <span>Спеціальності та професії</span>
+  <span>Наші контакти</span>
 </header>
 
 <!-- Overlay effect when opening sidebar on small screens -->
@@ -42,7 +40,7 @@ body {font-size:16px;}
 
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="showcase">
-    <h1 class="w3-jumbo"><b>Спеціальності та професії</b></h1>
+    <h1 class="w3-jumbo"><b>Наші контакти</b></h1>
 
 
   <!-- Modal for full size images on click-->
@@ -53,41 +51,16 @@ body {font-size:16px;}
       <p id="caption"></p>
     </div>
   </div>
-
-
-
- 
-
-  <!-- Packages / Pricing Tables -->
-  <div class="w3-container" id="packages" style="margin-top:75px">
-    <hr style="width:50px;border:5px solid #00bcd4" class="w3-round">
-    <p>Вступ на основі 9 класу (базова середня освіта), 11 класу (повна середня освіта), ОКР “кваліфікований робітник” або вищої освіти</p>
-  </div>
-
-  <div class="w3-row-padding">
-    <div class="w3-half w3-margin-bottom">
-      <ul class="w3-ul w3-light-grey w3-center">
-        <li class="w3-dark-grey w3-xlarge w3-padding-32">Базова середня освіта</li>
-        <li class="w3-padding-16">👨‍💻 121 Інженерія програмного забезпечення</li>
-        <li class="w3-padding-16">🖥 123 Комп’ютерна інженерія</li>
-        <li class="w3-padding-16">🍰 181 Харчові технології</li>
-        <li class="w3-padding-16">🏨 241 Готельно-ресторанна справа</li>
-        <li class="w3-padding-16">🏝 242 Туризм і рекреація</li>
-       <li class="w3-padding-16">📑 071 Облік і оподаткування</li>
-             <li class="w3-padding-16">📢 075 Маркетинг</li>
-        <li class="w3-padding-16">📊 076 Підприємництво та торгівля</li>
-
+    <div class="w3-container" id="packages" style="margin-top:75px">
+      <h2 class="w3-jumbo"><b>Телефони</b></h2>
+      <h3 class="w3-jumbo"><b>+380(99)511-32-54</b></h3>
+      <h3 class="w3-jumbo"><b>+380(99)511-32-52</b></h3>
     </div>
-        
-    <div class="w3-half">
-      <ul class="w3-ul w3-light-grey w3-center">
-        <li class="w3-cyan w3-xlarge w3-padding-32"><p style="color:white">Повня середня освіта</p></li>
-        <li class="w3-padding-16">⌨️ Оператор з обробки інформації та програмного забезпечення. Термін навчання: 3 роки</li>
-        <li class="w3-padding-16">⚡️ Слюсар-електрик з ремонту електроустаткування. Термін навчання: 2 роки 8 місяців</li>
-        <li class="w3-padding-16">🍳 Кухар. Термін навчання: 3 роки</li>
-        <li class="w3-padding-16">🍹 Офіціант. Бармен. Термін навчання: 3 роки</li>
-        <li class="w3-padding-16">🧁 Пекар. Кондитер. Термін навчання: 1 рік</li>
-        <li class="w3-padding-16">🏕 Агент з організації туризму. Адміністратор. Термін навчання: 1 рік 4 місяці</li>
+    <div class="w3-container" id="packages" style="margin-top:75px">
+      <h2 class="w3-jumbo"><b>Адреси</b></h2>
+      <h3 class="w3-jumbo"><b>Волі 15, Луцьк, Україна</b></h3>
+      <h3 class="w3-jumbo"><b>Потебна 4, Луцьк, Україна</b></h3>
+      <h3 class="w3-jumbo"><b>Львівська 27, Луцьк, Україна</b></h3>
     </div>
   </div>
   
