--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
           
           <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" >Головне</a>
-          <a href="#games" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Меню</a>
+          <a href="https://archibaldkami.github.io/Meow/cources.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Курси</a>
           <a href="#shop" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Новини</a>
           <a href="#events" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Наші викладачі</a>
-          <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Наші контакти</a>
+          <a href="https://archibaldkami.github.io/Meow/contacts.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Наші контакти</a>
         </div>
     
       </div>
@@ -32,10 +32,10 @@
       <!-- Navbar on small screens -->
       <div id="navDemo" class="w3-bar-block  w3-hide w3-hide-large w3-hide-medium w3-large">
         <a href="#about" class="w3-bar-item w3-button w3-padding-large"onclick="myFunction()">Головне</a>
-        <a href="#games" class="w3-bar-item w3-button w3-padding-large"onclick="myFunction()">Меню</a>
+        <a href="https://archibaldkami.github.io/Meow/cources.html" class="w3-bar-item w3-button w3-padding-large"onclick="myFunction()">Курси</a>
         <a href="#shop" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Новини</a>
         <a href="#events" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Наші викладачі</a>
-        <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Наші контакти</a>
+        <a href="https://archibaldkami.github.io/Meow/contacts.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Наші контакти</a>
       </div>
     </div>
   </header>
@@ -92,7 +92,7 @@
         <div class="games">
           <div class="game-list">
             <img src="https://th.bing.com/th/id/OIP.SkFMkjJtNQZkMJ2PqidKuwHaEK?w=297&h=180&c=7&r=0&o=5&pid=1.7" style="width:100px; height: 100px;"/>
-            <h3>Кодування андроїд</h3>
+            <h3>Кодування на андроїд</h3>
             <a class="w3-mall w3-text-cyan" href="https://archibaldkami.github.io/Meow/KoduvannyaNaAndroid.html"></i><span >Перейти</p></span></span></a>
           </div>
           <div class="game-list">
