--- a/contacts.html
+++ b/contacts.html
@@ -52,15 +52,15 @@ body {font-size:16px;}
     </div>
   </div>
     <div class="w3-container" id="packages" style="margin-top:75px">
-      <h2 class="w3-jumbo"><b>Телефони</b></h2>
-      <h3 class="w3-jumbo"><b>+380(99)511-32-54</b></h3>
-      <h3 class="w3-jumbo"><b>+380(99)511-32-52</b></h3>
+      <h1 class="w3-xxxlarge w3-text-cyan"><b>Телефони</b></h1>
+      <b>+380(99)511-32-54</b>
+      <b>+380(99)511-32-52</b>
     </div>
     <div class="w3-container" id="packages" style="margin-top:75px">
-      <h2 class="w3-jumbo"><b>Адреси</b></h2>
-      <h3 class="w3-jumbo"><b>Волі 15, Луцьк, Україна</b></h3>
-      <h3 class="w3-jumbo"><b>Потебна 4, Луцьк, Україна</b></h3>
-      <h3 class="w3-jumbo"><b>Львівська 27, Луцьк, Україна</b></h3>
+      <h1 class="w3-xxxlarge w3-text-cyan"><b>Адреси</b></h1>
+      <b>Волі 15, Луцьк, Україна</b>
+      <b>Потебна 4, Луцьк, Україна</b>
+      <b>Львівська 27, Луцьк, Україна</b>
     </div>
   </div>
   
