--- a/cources.html
+++ b/cources.html
@@ -44,7 +44,7 @@ body {font-size:16px;}
 
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px" id="showcase">
-    <h1 class="w3-jumbo"><b>Наші курси</b></h1>
+    <h1 class="w3-xxxlarge w3-text-cyan"><b>Наші курси</b></h1>
 
 
   <!-- Modal for full size images on click-->
@@ -56,9 +56,9 @@ body {font-size:16px;}
     </div>
   </div>
     <div class="w3-container" id="packages" style="margin-top:75px">
-      <h2 class="w3-jumbo"><b><a href="https://archibaldkami.github.io/Meow/KoduvannyaNaAndroid.html"class="w3-hover-cyan">Кодування на андроїд</a></b></h2>
-      <h2 class="w3-jumbo"><b><a href="https://archibaldkami.github.io/Meow/KodyvannyaNaPython.html"class="w3-hover-cyan">Кодування на пайтон</a></b></h2>
-      <h2 class="w3-jumbo"><b><a href="https://archibaldkami.github.io/Meow/StvorennyaSaytiv.html" class="w3-hover-cyan">Створення сайтів</a></b></h2>
+      <b><a href="https://archibaldkami.github.io/Meow/KoduvannyaNaAndroid.html"class="w3-hover-cyan">Кодування на андроїд</a></b>
+      <b><a href="https://archibaldkami.github.io/Meow/KodyvannyaNaPython.html"class="w3-hover-cyan">Кодування на пайтон</a></b>
+      <b><a href="https://archibaldkami.github.io/Meow/StvorennyaSaytiv.html" class="w3-hover-cyan">Створення сайтів</a></b>
     </div>
   </div>
   
