--- a/contacts.html
+++ b/contacts.html
@@ -53,14 +53,14 @@ body {font-size:16px;}
   </div>
     <div class="w3-container" id="packages" style="margin-top:75px">
       <h1 class="w3-xxxlarge w3-text-cyan"><b>Телефони</b></h1>
-      <b>+380(99)511-32-54</b>
-      <b>+380(99)511-32-52</b>
+      <p><b>+380(99)511-32-54</b></p>
+      <p><b>+380(99)511-32-52</b></p>
     </div>
     <div class="w3-container" id="packages" style="margin-top:75px">
       <h1 class="w3-xxxlarge w3-text-cyan"><b>Адреси</b></h1>
-      <b>Волі 15, Луцьк, Україна</b>
-      <b>Потебна 4, Луцьк, Україна</b>
-      <b>Львівська 27, Луцьк, Україна</b>
+      <p><b>Волі 15, Луцьк, Україна</b></p>
+      <p><b>Потебна 4, Луцьк, Україна</b></p>
+      <p><b>Львівська 27, Луцьк, Україна</b></p>
     </div>
   </div>
   
