--- a/cources.html
+++ b/cources.html
@@ -56,9 +56,9 @@ body {font-size:16px;}
     </div>
   </div>
     <div class="w3-container" id="packages" style="margin-top:75px">
-      <b><a href="https://archibaldkami.github.io/Meow/KoduvannyaNaAndroid.html"class="w3-hover-cyan">Кодування на андроїд</a></b>
-      <b><a href="https://archibaldkami.github.io/Meow/KodyvannyaNaPython.html"class="w3-hover-cyan">Кодування на пайтон</a></b>
-      <b><a href="https://archibaldkami.github.io/Meow/StvorennyaSaytiv.html" class="w3-hover-cyan">Створення сайтів</a></b>
+      <p><b><a href="https://archibaldkami.github.io/Meow/KoduvannyaNaAndroid.html"class="w3-hover-cyan">Кодування на андроїд</a></b></p>
+      <p><b><a href="https://archibaldkami.github.io/Meow/KodyvannyaNaPython.html"class="w3-hover-cyan">Кодування на пайтон</a></b></p>
+    <p><b><a href="https://archibaldkami.github.io/Meow/StvorennyaSaytiv.html" class="w3-hover-cyan">Створення сайтів</a></b></p>
     </div>
   </div>
   
